--- a/scss/mixin/_font.scss
+++ b/scss/mixin/_font.scss
@@ -1,67 +1,78 @@
 //Halyard Display
-@mixin halyard_extralight {
+@mixin halyard_extralight($font-size: 12px) {
     font-family: halyard-display, sans-serif;
     font-weight: 100;
     font-style: normal;
+    font-size: $font-size;
 }
-@mixin halyard_book {
+@mixin halyard_book($font-size: 12px) {
     font-family: halyard-display, sans-serif;
     font-weight: 300;
     font-style: normal;
 }
-@mixin halyard_reguler {
+@mixin halyard_reguler($font-size: 12px) {
     font-family: halyard-display, sans-serif;
     font-weight: 400;
     font-style: normal;
+    font-size: $font-size;
 }
-@mixin halyard_bold {
+@mixin halyard_bold($font-size: 12px) {
     font-family: halyard-display, sans-serif;
     font-weight: 600;
     font-style: normal;
+    font-size: $font-size;
 }
 
 //Mrs Eaves
-@mixin eaves_roman {
+@mixin eaves_roman($font-size: 12px) {
     font-family: mrs-eaves, serif;
     font-weight: 400;
     font-style: normal;
+    font-size: $font-size;
 }
-@mixin eaves_bold {
+@mixin eaves_bold($font-size: 12px) {
     font-family: mrs-eaves, serif;
     font-weight: 700;
     font-style: normal;
+    font-size: $font-size;
 }
 
 //源ノ角ゴシック
-@mixin japanesesans_extralight {
+@mixin japanesesans_extralight($font-size: 12px) {
     font-family: source-han-sans-japanese, sans-serif;
-font-weight: 200;
-font-style: normal;
+    font-weight: 200;
+    font-style: normal;
+    font-size: $font-size;
 }
-@mixin japanesesans_light {
+@mixin japanesesans_light($font-size: 12px) {
     font-family: source-han-sans-japanese, sans-serif;
-font-weight: 300;
-font-style: normal;
+    font-weight: 300;
+    font-style: normal;
+    font-size: $font-size;
 }
-@mixin japanesesans_reguler {
+@mixin japanesesans_reguler($font-size: 12px) {
     font-family: source-han-sans-japanese, sans-serif;
-font-weight: 400;
-font-style: normal;
+    font-weight: 400;
+    font-style: normal;
+    font-size: $font-size;
 }
-@mixin japanesesans_bold {
+@mixin japanesesans_bold($font-size: 12px) {
     font-family: source-han-sans-japanese, sans-serif;
-font-weight: 700;
-font-style: normal;
+    font-weight: 700;
+    font-style: normal;
+    font-size: $font-size;
 }
 
 //游明朝
-@mixin mincho_reguler {
+@mixin mincho_reguler($font-size: 12px) {
     font-family: yu-mincho-pr6n, sans-serif;
-font-weight: 400;
-font-style: normal;
+    font-weight: 400;
+    font-style: normal;
+    font-size: $font-size;
 }
-@mixin mincho_bold {
+@mixin mincho_bold($font-size: 12px) {
     font-family: yu-mincho-pr6n, sans-serif;
-font-weight: 600;
-font-style: normal;
+    font-weight: 600;
+    font-style: normal;
+    font-size: $font-size;
 }
