--- a/scss/module/_header.scss
+++ b/scss/module/_header.scss
@@ -1,24 +1,51 @@
-.gnav{
+.gnav {
     @include halyard_reguler;
     letter-spacing: 0.13rem;
     height: 48px;
     width: 100%;
     background-color: $black;
-    &__list{
+    &__list {
         height: 100%;
-        width: 50%;
+        width: 60%;
         display: flex;
         margin: 0 auto;
         padding: 0 20px;
         justify-content: space-between;
         align-items: center;
     }
-    &__item{
+    a {
+        display: flex;
+        position: relative;
+        text-decoration: none;
+        align-items: center;
+        height: 100%;
+    }
+    a::after {
+        position: absolute;
+        bottom: 0px;
+        left: 0;
+        content: "";
+        width: 100%;
+        height: 4px;
+        background: $white;
+        transform: scale(0, 1);
+        transform-origin: right top;
+        transition: transform 0.3s;
+    }
+    a:hover::after {
+        transform-origin: left top;
+        transform: scale(1, 1);
+    }
+    &__item {
         color: $white;
-        font-size: 12px;
-        &-icon{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        img {
             width: 22px;
             height: 22px;
+            display: block;
         }
     }
 }
