--- a/scss/style.css
+++ b/scss/style.css
@@ -400,6 +400,10 @@ th {
   font-weight: bold;
 }
 
+body {
+  background-color: #fffaee;
+}
+
 .gnav {
   font-family: halyard-display, sans-serif;
   font-weight: 400;
@@ -545,5 +549,42 @@ th {
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
+}
+
+.form {
+  width: 20vw;
+  height: 30vh;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.form__inputbox {
+  width: 100%;
+  border-bottom: solid #2f2f2f 1px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  outline: 0;
+}
+
+.form__inputbox :focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  outline: 0;
+}
+
+.form__submit {
+  border: solid #2f2f2f 1px;
+  border-radius: 2rem;
+  padding: 10px 10px;
+  text-align: center;
 }
 /*# sourceMappingURL=style.css.map */
