--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,7 @@
 
 //page
 @import './page/home';
+@import './page/about';
 @import './page/contact';
 @import './page/signin';
 @import './page/login';
