--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,15 @@
 body{
     background-color: $white;
 }
+h1{
+    font-size: 40px;
+}
+h2{
+    font-size: 32px;
+}
+h3{
+    font-size: 24px;
+}
+p{
+    font-size: 14px;
+}
