--- a/scss/page/_home.scss
+++ b/scss/page/_home.scss
@@ -24,12 +24,12 @@
         margin-top: 80px;
     }
     &__headline {
-        @include japanesesans_bold(40px);
+        @include japanesesans_bold;
         letter-spacing: 2rem;
         padding: 20px 0;
     }
     &__subline {
-        @include japanesesans_reguler(24px);
+        @include japanesesans_reguler;
         letter-spacing: 0.2rem;
         padding: 20px 0;
     }
@@ -42,6 +42,6 @@
         padding: 0.8rem 2.5rem;
         border-radius: 2rem;
         border: solid $blue 2px;
-        @include japanesesans_reguler(16px);
+        @include japanesesans_reguler;
     }
 }
